force-app/main/default/objects/Incident_Report__c/Incident_Report__c.object-meta.xml
<CustomObject>
    <description>Monitor and identify areas of the business that are repeatedly costing us time and money.</description>
    <label>Incident Report</label>
    <nameField>
        <displayFormat>Incident Report - {0000}</displayFormat>
        <label>Incident Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>