force-app/main/default/objects/Incident_Report__c/fields/Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows &quot;Person Responsible&quot; to acknowledge the incident</description>
    <label>Acknowledged</label>
    <type>Checkbox</type>
</CustomField>