force-app/main/default/objects/Incident_Report__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Incident Reports</relationshipLabel>
    <relationshipName>Incident_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>