force-app/main/default/objects/Incident_Report__c/fields/Cost_to_Business__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Business__c</fullName>
    <label>Total Cost to Rectify</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>