force-app/main/default/objects/Incident_Report__c/fields/Date_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incident__c</fullName>
    <description>Allows user to select the date that the incident occurred</description>
    <label>Date of Incident</label>
    <type>Date</type>
</CustomField>