force-app/main/default/objects/Incident_Report__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows user to select the Deal that incident relates to</description>
    <label>Deal ID</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Incident Reports</relationshipLabel>
    <relationshipName>Incident_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>