force-app/main/default/objects/Incident_Report__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>Allows user to select the departure date</description>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>