force-app/main/default/objects/Incident_Report__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Allows user to describe the details of the incident</description>
    <label>Details / Reason for the call</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>