force-app/main/default/objects/Incident_Report__c/fields/Emergency_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Phone_No__c</fullName>
    <label>Emergency Phone No</label>
    <type>Phone</type>
</CustomField>