force-app/main/default/objects/Incident_Report__c/fields/Follow_up_required__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_required__c</fullName>
    <inlineHelpText>Is the TAD onshore team required to action anything during business hours e.g. flight reissues, hotel booking?</inlineHelpText>
    <label>Follow up required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>