force-app/main/default/objects/Incident_Report__c/fields/If_advice_escalation_needed_to_whom__c.field-meta.xml
<CustomField>
    <fullName>If_advice_escalation_needed_to_whom__c</fullName>
    <label>If advice/escalation needed to whom?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>