force-app/main/default/objects/Incident_Report__c/fields/If_yes_by_who__c.field-meta.xml
<CustomField>
    <fullName>If_yes_by_who__c</fullName>
    <label>If yes, by who?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>TAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>