force-app/main/default/objects/Incident_Report__c/fields/Incident_Cost_to_the_Business1__c.field-meta.xml
<CustomField>
    <fullName>Incident_Cost_to_the_Business1__c</fullName>
    <label>Incident Cost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>