force-app/main/default/objects/Incident_Report__c/fields/Incident_Cost_to_the_Business__c.field-meta.xml
<CustomField>
    <fullName>Incident_Cost_to_the_Business__c</fullName>
    <description>Allows user to define a dollar value for the incident</description>
    <label>Incident Cost to the Business</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>