force-app/main/default/objects/Incident_Report__c/fields/Incident_related_to__c.field-meta.xml
<CustomField>
    <fullName>Incident_related_to__c</fullName>
    <label>Incident related to</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Incident_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer No-Show</fullName>
            </value>
            <value>
                <fullName>Customer misses Flight</fullName>
            </value>
            <value>
                <fullName>No Flights have been booked</fullName>
            </value>
            <value>
                <fullName>Customer Name and Date Changes</fullName>
            </value>
            <value>
                <fullName>Customer wants to cancel their tour</fullName>
            </value>
            <value>
                <fullName>Customer wants to voluntarily change their flights</fullName>
            </value>
            <value>
                <fullName>Customer arrives at the airport and their flight booking is missing or incorrect</fullName>
            </value>
            <value>
                <fullName>Customer has had an airline schedule change (flights delayed or cancelled)</fullName>
            </value>
            <value>
                <fullName>Customer misses a flight connection</fullName>
            </value>
            <value>
                <fullName>Customer is refused boarding due to an invalid Visa</fullName>
            </value>
            <value>
                <fullName>Customer misses a return flight</fullName>
            </value>
            <value>
                <fullName>Customer is unable to depart on their scheduled flight</fullName>
            </value>
            <value>
                <fullName>Customer Lost on Tour</fullName>
            </value>
            <value>
                <fullName>On-tour incident e.g. Accident, Injury, Medical or Theft</fullName>
            </value>
            <value>
                <fullName>Death on Tour</fullName>
            </value>
            <value>
                <fullName>Lost luggage</fullName>
            </value>
            <value>
                <fullName>Lost/stolen passport</fullName>
            </value>
            <value>
                <fullName>Arrested / Detained or in Trouble with the local Police / Authorities</fullName>
            </value>
            <value>
                <fullName>Customer is refused a Visa</fullName>
            </value>
            <value>
                <fullName>Customer arriving with no booking made for them</fullName>
            </value>
            <value>
                <fullName>Customer claiming to have paid for extras not identified to Merchant</fullName>
            </value>
            <value>
                <fullName>Customer Arrives at Airport with No Transfer Booked for them</fullName>
            </value>
            <value>
                <fullName>Customer arrives for a stopover and their accommodation booking is incorrect</fullName>
            </value>
            <value>
                <fullName>Customer arrives at their destination and nobody is there to meet them</fullName>
            </value>
            <value>
                <fullName>Customer arrives at their destination and their tour booking is incorrect</fullName>
            </value>
            <value>
                <fullName>Customer arrives at their destination and they are not happy with their accommodation</fullName>
            </value>
            <value>
                <fullName>Customer wants to leave the tour early</fullName>
            </value>
            <value>
                <fullName>Changes to tour itinerary resulting in additional costs</fullName>
            </value>
            <value>
                <fullName>Customer refuses to pay “in destination” additional costs ie tipping, optional tours, chargescollected on tour directly by operator etc</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>