force-app/main/default/objects/Incident_Report__c/fields/Incident_reported_to__c.field-meta.xml
<CustomField>
    <fullName>Incident_reported_to__c</fullName>
    <label>Incident reported to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shannon Knapp</fullName>
            </value>
            <value>
                <fullName>Luke O&apos;Dwyer</fullName>
            </value>
            <value>
                <fullName>Alexandra Chakos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>