force-app/main/default/objects/Incident_Report__c/fields/Incident_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Incident_Resolved__c</fullName>
    <label>Was the Incident Resolved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>