force-app/main/default/objects/Incident_Report__c/fields/Name_of_person_who_made_contact__c.field-meta.xml
<CustomField>
    <fullName>Name_of_person_who_made_contact__c</fullName>
    <label>Name of person who made contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>