force-app/main/default/objects/Incident_Report__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows user to select the order that the incident relates to</description>
    <label>Order Number</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Incident Reports</relationshipLabel>
    <relationshipName>Incident_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>