force-app/main/default/objects/Incident_Report__c/fields/Origin_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Origin_of_Call__c</fullName>
    <label>Origin of Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct from Merchant</fullName>
            </value>
            <value>
                <fullName>Direct from Customer</fullName>
            </value>
            <value>
                <fullName>Referred from TAD Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>