force-app/main/default/objects/Incident_Report__c/fields/Person_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows user to select the person responsible</description>
    <label>Person Responsible</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Incident_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>