force-app/main/default/objects/Incident_Report__c/fields/Resolution_outcome__c.field-meta.xml
<CustomField>
    <fullName>Resolution_outcome__c</fullName>
    <label>Resolution outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>