force-app/main/default/objects/Incident_Report__c/fields/Time_Spent_Numerical_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Numerical_in_Hours__c</fullName>
    <label>Time Spent (Numerical in Hours)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>