force-app/main/default/objects/Incident_Report__c/fields/What_follow_up_is_required__c.field-meta.xml
<CustomField>
    <fullName>What_follow_up_is_required__c</fullName>
    <inlineHelpText>Provide any important information on what the customer will be expecting from us and how best to get in touch with the customer.</inlineHelpText>
    <label>What follow up is required?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>