force-app/main/default/objects/Incident_Report__c/fields/Who_is_liable_for_costs__c.field-meta.xml
<CustomField>
    <fullName>Who_is_liable_for_costs__c</fullName>
    <label>Who is liable for costs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAD</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>