force-app/main/default/objects/Incident_Report__c/fields/Will_these_costs_be_re_imbursed__c.field-meta.xml
<CustomField>
    <fullName>Will_these_costs_be_re_imbursed__c</fullName>
    <label>Will these costs be re-imbursed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>