force-app/main/default/objects/Incident_Report__c/validationRules/Cost_to_Business.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_to_Business</fullName>
    <active>true</active>
    <description>If Incident Cost = Yes then Total Cost to Rectify must be completed</description>
    <errorConditionFormula>AND 
(ISPICKVAL( Incident_Cost_to_the_Business1__c , &quot;Yes&quot;),
 ISBLANK(  Cost_to_Business__c ))</errorConditionFormula>
    <errorDisplayField>Cost_to_Business__c</errorDisplayField>
    <errorMessage>As Incident Cost = Yes, please make sure Total Cost to Rectify is described</errorMessage>
</ValidationRule>