force-app/main/default/objects/Incident_Report__c/validationRules/Follow_up_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_up_required</fullName>
    <active>true</active>
    <description>If Follow Up Required = Yes then What Follow up is required</description>
    <errorConditionFormula>AND 
(ISPICKVAL(Follow_up_required__c , &quot;Yes&quot;),
 ISBLANK( What_follow_up_is_required__c ))</errorConditionFormula>
    <errorDisplayField>What_follow_up_is_required__c</errorDisplayField>
    <errorMessage>As Follow up is required, please make sure &quot;What follow up is required&quot; is described</errorMessage>
</ValidationRule>