force-app/main/default/objects/Incident_Report__c/validationRules/Specify_who_costs_will_be_reimbursed_by.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_who_costs_will_be_reimbursed_by</fullName>
    <active>true</active>
    <description>Specify who costs will be reimbursed by</description>
    <errorConditionFormula>AND
(ISPICKVAL(
Will_these_costs_be_re_imbursed__c , &quot;Yes&quot;),
(ISPICKVAL(If_yes_by_who__c,&quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>If_yes_by_who__c</errorDisplayField>
    <errorMessage>Please specify who these costs will be reimbursed by</errorMessage>
</ValidationRule>